# OFIQ-Project

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  Version.txt
.github/workflows/: build-macos.yml  build-ubuntu.yaml  build-ubuntu.yml  build-windows.yml  windows-build.yml
OFIQlib/: CMakeLists.macos.cmake  CMakeLists.ubuntu.cmake  CMakeLists.ubuntu.conan.cmake  CMakeLists.ubuntu_arm64.cmake  CMakeLists.windows.cmake
OFIQlib/include/: ofiq_lib.h  ofiq_lib_impl.h  ofiq_structs.h
OFIQlib/include/mtcnn/: onet.h
OFIQlib/modules/detectors/: AllDetectors.h  detector.h  opencv_ssd_face_detector.h  opencv_yolo_face_detector.h  yolov8_face_detector.h
OFIQlib/modules/detectors/src/: detector.cc  detectors.cpp  opencv_ssd_face_detector.cpp  opencv_yolo_face_detector.cpp  yolov8_face_detector.cpp
OFIQlib/modules/landmarks/src/: FaceMeasures.cpp  PartExtractor.cpp  adnet_landmarks.cpp  landmarks.cpp
OFIQlib/modules/measures/: CompressionArtifacts.h  Executor.h  ExpressionNeutrality.h  UnifiedQualityScore.h
OFIQlib/modules/measures/src/: BackgroundUniformity.cpp  CompressionArtifacts.cpp  CropOfTheFaceImage.cpp  DynamicRange.cpp  Executor.cpp  ExpressionNeutrality.cpp  EyesOpen.cpp  EyesVisible.cpp  FaceOcclusionPrevention.cpp  HeadPose.cpp  HeadSize.cpp  IlluminationUniformity.cpp  InterEyeDistance.cpp  Luminance.cpp  Measure.cpp  MeasureFactory.cpp  MouthClosed.cpp  MouthOcclusionPrevention.cpp  NaturalColour.cpp  NoHeadCoverings.cpp  OverExposurePrevention.cpp  Sharpness.cpp  SingleFacePresent.cpp  UnderExposurePrevention.cpp  UnifiedQualityScore.cpp
OFIQlib/modules/poseEstimators/src/: HeadPose3DDFAV2.cpp
OFIQlib/modules/segmentations/: FaceOcclusionSegmentation.h  FaceParsing.h  ONNXRTSegmentation.h
OFIQlib/modules/segmentations/src/: FaceOcclusionSegmentation.cpp  FaceParsing.cpp  ONNXRTSegmentation.cpp  segmentations.cpp
OFIQlib/modules/utils/: Configuration.h  DataStream.h  DataStreamAndroid.h  DataStreamDesktop.h  DataStreamIOS.h  NeuronalNetworkContainer.h  Session.h  image_utils.h  utils.h
OFIQlib/modules/utils/src/: Configuration.cpp  DataStreamAndroid.cpp  OFIQError.cpp  Session.cpp  image_io.cpp  image_utils.cpp  utils.cpp
OFIQlib/src/: OFIQImpl.cpp  OFIQInitialization.cpp  OFIQSampleApp.cpp
OFIQlib/src/mtcnn/: detector.cc  onet.cc  pnet.cc  rnet.cc
_vscode/: settings.json
cmake/: DownloadExternalSourceCode.cmake  SourceDefinition.cmake
conan/: conanfile.txt
data/: ofiq_config.jaxn
doc/src/: mainpage.h
mobile/: BUILD.md  build_for_android.bat  build_for_android.sh  build_for_ios.sh
mobile/apps/android/OFIQMobile/: settings.gradle.kts
mobile/apps/android/OFIQMobile/app/: build.gradle.kts
mobile/apps/android/OFIQMobile/app/src/main/: AndroidManifest.xml
mobile/apps/android/OFIQMobile/app/src/main/java/de/bund/bsi/ofiqmobile/: OfiqMobileDemoAppApplication.kt
mobile/apps/android/OFIQMobile/app/src/main/java/de/bund/bsi/ofiqmobile/activity/: CameraActivity.kt  ImageActivity.kt  (+2 more)
mobile/apps/android/OFIQMobile/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/apps/android/OFIQMobile/gradle/: libs.versions.toml
mobile/apps/android/OFIQMobile/gradle/wrapper/: gradle-wrapper.properties
mobile/apps/iOS/OFIQMobile/: ExportOptions.plist
mobile/apps/iOS/OFIQMobile/OFIQMobile/: Localizable.xcstrings  OFIQMobileApp.swift
mobile/apps/iOS/OFIQMobile/OFIQMobile.xcodeproj/: project.pbxproj
mobile/apps/iOS/OFIQMobile/OFIQMobile/Assets.xcassets/mainColor.colorset/: Contents.json
mobile/apps/iOS/OFIQMobile/OFIQMobile/model/: MetricType.swift  Rotator.swift
mobile/apps/iOS/OFIQMobile/OFIQMobile/view/: AppBody.swift  CameraView.swift  CustomButton.swift  Dim.swift  ImageView.swift  MainView.swift  Progress.swift  ResultTable.swift  ResultView.swift  TopBar.swift
mobile/apps/iOS/OFIQMobile/OFIQMobile/viewmodel/: CameraViewModel.swift  ImageViewModel.swift  MainViewModel.swift  ResultViewModel.swift
mobile/lib-projects/android/ofiqlib/: settings.gradle
mobile/lib-projects/android/ofiqlib/gradle/wrapper/: gradle-wrapper.properties
mobile/lib-projects/android/ofiqlib/ofiqlib/: build.gradle
mobile/lib-projects/android/ofiqlib/ofiqlib/src/main/cpp/: CMakeLists.txt  ofiqlib.cpp
mobile/lib-projects/iOS/ofiqlib/: Podfile  readVersion.sh
mobile/lib-projects/iOS/ofiqlib/ofiqlib/: InitializeResult.h  InitializeResult.mm  OfiqLib.mm  QualityMeasureAssessment.h  QualityMeasureAssessment.mm  QualityMetrics.h  QualityMetrics.mm  ReturnCode.h  ofiqlib.h
mobile/lib-projects/iOS/ofiqlib/ofiqlib.xcodeproj/: project.pbxproj
mobile/lib-projects/iOS/ofiqlib/ofiqlib.xcworkspace/: contents.xcworkspacedata
scripts/: build.cmd  build.sh
testing/: CMakeLists.txt  test_conformance_table.cpp
(+29 files in other folders)
